# photo-vault

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml
assets/: tailwind.css
migrations/: 20240101000000_create_photos.sql  20240102000000_add_public_id.sql  20240103000000_add_dimensions.sql  20240104000000_create_users.sql  20240105000000_create_credentials.sql  20240106000000_create_sessions.sql  20240107000000_create_webauthn_challenges.sql  20240108000000_create_photos_fts.sql  20240109000000_photos_user_scope.sql
src/: api.rs  main.rs
src/components/: lazy_image.rs  lightbox.rs  login_form.rs  mod.rs  passkey_card.rs  photo_grid.rs  register_form.rs  search_bar.rs  upload_form.rs
src/models/: photo.rs
src/server/: auth.rs  db.rs  mod.rs  photos.rs  session.rs
src/views/: about.rs  home.rs  login.rs  mod.rs  navbar.rs  passkeys.rs  register.rs  upload.rs
