[package]
name = "dioxus-demo"
version = "0.1.0"
authors = ["Mariusz Pierzchała <mario.pierzchala@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
serde = { version = "1", features = ["derive"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server", "dep:sqlx", "dep:tokio", "dep:tracing", "dep:tracing-subscriber"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite", "migrate"]
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
