[package]
name = "photo-vault"
version = "0.1.0"
authors = ["Mariusz Pierzchała <mario.pierzchala@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server", "dep:sqlx", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:image", "dep:sha2", "dep:hex", "dep:axum-extra", "dep:axum", "dep:uuid", "dep:webauthn-rs", "dep:url", "dep:rand", "dep:chrono", ]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite", "migrate"]
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[dependencies.image]
version = "0.25"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.hex]
version = "0.4"
optional = true

[dependencies.axum-extra]
version = "0.10"
features = ["multipart"]
optional = true

[dependencies.axum]
version = "0.8"
optional = true

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]
optional = true

[dependencies.webauthn-rs]
version = "0.5"
features = ["danger-allow-state-serialisation"]
optional = true

[dependencies.url]
version = "2"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.chrono]
version = "0.4"
features = ["serde"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["FormData", "File", "Blob", "HtmlInputElement", "FileList", "IntersectionObserver", "IntersectionObserverInit", "IntersectionObserverEntry", "KeyboardEvent", "CredentialsContainer", "Navigator", "PublicKeyCredential", "AuthenticatorResponse", "AuthenticatorAttestationResponse", "AuthenticatorAssertionResponse"] }
gloo-net = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
